# settlers_comp_player

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Readme.md  all_test  all_test.sh  build_all  check_unity.sh  cloudbuild.yaml  one_test
include/: A_Game.hpp  A_Player.hpp  Array.hpp  Board.hpp  G_Player.hpp  Game.hpp  Genetic.hpp  Player.hpp  b_common.hpp  common.hpp
src/: A_Game.cpp  A_Player.cpp  Array.cpp  Board.cpp  CMakeLists.txt  G_Player.cpp  Game.cpp  Genetic.cpp  Player.cpp  b_common.cpp  common.cpp  main.cpp
test/: CMakeLists.txt  a_game_test.cpp  genetic_test.cpp  play_test.cpp  test.cpp
